--- a/app/javascript/stylesheets/_custom.scss
+++ b/app/javascript/stylesheets/_custom.scss
@@ -44,8 +44,7 @@ body{
 			color: $super-light-gray;
 	}
 
-.navbar-default .navbar-brand {
-	/*color: rgb(55, 85, 99)*/
+.navbar .navbar-brand {
 	color: $light-gray;
 
 
@@ -57,7 +56,6 @@ body{
 .navbar-brand {
 	font-size: 32px;
 	font-family: "Pacifico";
-
 }
 
 .navbar {
@@ -70,18 +68,16 @@ body{
 		width: 100%;
 	}
 
-
-	.nav {
-		font-size: 14px;
+	.nav-item {
 		text-transform: uppercase;
 	}
 }
 
-.navbar-default {
+.navbar {
 	padding-bottom: 10px;
 	.navbar-nav {
 		li a {
-
+      font-size: 12px;
 			color: #484848;
 			padding-bottom: 5px;
 			padding-left: 10px;
@@ -274,14 +270,11 @@ body{
 	}
 	.insta {
 			font-size: 16px;
-
 		}
 }
 
-
 .portfolio {
 	padding-top: 50px;
-	padding-left: 100px;
 
 	@media screen and (max-width: 720px) {
 					padding-left: 50px;
@@ -291,7 +284,6 @@ body{
 					padding-top: 40px;
 				}
 }
-
 
 .media-left {
 	position: relative;
