--- a/app/views/admin/paintings/_form.html.erb
+++ b/app/views/admin/paintings/_form.html.erb
@@ -1,6 +1,20 @@
-<h1>New Painting</h1>
+<%= form_with model: [:category, @painting], url: admin_category_paintings_path, local: true do |form| %>
 
-<%= form_with scope: :painting, url: paintings_path, local: true do |form| %>
+  <% if @painting.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@painting.errors.count, "error") %>
+  prohibited
+        this painting from being saved:
+      </h2>
+      <ul>
+        <% @painting.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <p>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
@@ -36,4 +50,5 @@
   <p>
     <%= form.submit %>
   </p>
+
 <% end %>
