--- a/app/views/admin/paintings/show.html.erb
+++ b/app/views/admin/paintings/show.html.erb
@@ -37,4 +37,4 @@
   <%= image_tag @painting.image if @painting.image.attached? %>
 </p>
 
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Back', admin_categories_path %>
