make welcome#index

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
-<% @categories.each do |cat| %>
-  <%= link_to cat.name, category_path(cat) %>
-<% end %>
+<div class="container">
+  <div class="wrapper">
+    <%= image_tag "welcome_cover.jpg", class: "cover-photo" %>
+  </div>
+</div>
