--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Jurgita Dishman</a>
+  <a class="navbar-brand" href="/">Jurgita Dishman</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -19,11 +19,25 @@
           Portfolio
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <%= @nav_categories.each do |cat| %>
-            <a class="dropdown-item" href="#">cat</a>
+          <% @nav_categories.each do |cat| %>
+            <%= link_to cat.name, category_path(cat), class: "dropdown-item" %>
           <% end %>
         </div>
       </li>
+
+      <% if admin? %>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-danger" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Admin
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <%= link_to "update paintings", admin_categories_path, class: "dropdown-item" %>
+            <%= link_to "new category", new_admin_category_path, class: "dropdown-item" %>
+            <%= link_to "leave admin", admin_logout_path, class: "dropdown-item" %>
+          </div>
+        </li>
+      <% end %>
+
     </ul>
   </div>
 </nav>
