--- a/app/views/admin/paintings/edit.html.erb
+++ b/app/views/admin/paintings/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Edit Painting</h1>
-
-<%= render 'form' %>
+<div class="row justify-content-md-center">
+  <%= render 'form', action: "Edit" %>
+</div>
