--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,17 +1,23 @@
-<h1>Categories</h1>
+<div class="p-3"></div>
+<div class="row justify-content-md-center m-4">
+  <div class="col col-md-2 border-bottom p-2">
+    <span class="text-uppercase">Category</span>
+  </div>
+  <div class="col col-md-4 border-bottom p-2">
+    <span class="text-uppercase">Options</span>
+  </div>
+</div>
 
-<table>
-  <tr>
-    <th>Category</th>
-    <th></th>
-  </tr>
-
-  <% @categories.each do |category| %>
-    <tr>
-      <td><%= category.name %></td>
-      <td><%= link_to 'Show', admin_category_path(category) %></td>
-      <td><%= link_to 'New Painting', new_admin_category_painting_path(category) %></td>
-      <td><%= link_to 'Edit', admin_category_path(category) %></td>
-    </tr>
-  <% end %>
-</table>
+<% @categories.each do |category| %>
+  <div class="row justify-content-md-center m-2">
+    <div class="col col-lg-2">
+      <span class="btn btn-light"><%= category.name %></span>
+    </div>
+    <div class="col col-lg-2">
+      <%= link_to 'New Painting', new_admin_category_painting_path(category), class: "btn btn-primary" %>
+    </div>
+    <div class="col col-lg-2">
+      <%= link_to 'Edit Category', admin_category_path(category), class: "btn btn-warning" %>
+    </div>
+  </div>
+<% end %>
