--- a/app/views/admin/paintings/new.html.erb
+++ b/app/views/admin/paintings/new.html.erb
@@ -1,3 +1,4 @@
-<h1>New Painting</h1>
 
-<%= render 'form' %>
+<div class="row justify-content-md-center">
+  <%= render 'form', action: "New" %>
+</div>
