--- a/app/views/admin/paintings/_form.html.erb
+++ b/app/views/admin/paintings/_form.html.erb
@@ -17,7 +17,7 @@
 
     <h3>
       <span class="p-2 badge badge-secondary badge-light">
-        <%= action %> Painting
+        <%= action %> Painting in <span class="badge-warning"><%= @category.name %>
       </span>
     </h3>
 
