--- a/app/views/admin/paintings/edit.html.erb
+++ b/app/views/admin/paintings/edit.html.erb
@@ -1,3 +1,7 @@
 <div class="row justify-content-md-center">
-  <%= render 'form', action: "Edit" %>
+  <%= render 'alerts' %>
+</div>
+
+<div class="row justify-content-md-center">
+  <%= render 'form', action: "Edit", url: admin_category_painting_path %>
 </div>
