--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -17,7 +17,7 @@
       <%= link_to 'New Painting', new_admin_category_painting_path(category), class: "btn btn-primary" %>
     </div>
     <div class="col col-lg-2">
-      <%= link_to 'Edit Category', admin_category_path(category), class: "btn btn-warning" %>
+      <%= link_to 'Edit Paintings', admin_category_path(category), class: "btn btn-warning" %>
     </div>
   </div>
 <% end %>
