--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -1,16 +1,35 @@
-<h1><%= @category.name %></h1>
+<h3 class="text-center">
+  <span class="p-2 badge badge-secondary badge-light">
+    Category <span class="badge-warning"><%= @category.name %>
+  </span>
+</h3>
 
-<table>
-  <tr>
-    <th>Paintings</th>
-    <th></th>
-  </tr>
+<div class="p-3"></div>
+<div class="row justify-content-md-center m-4">
+  <div class="col col-md-2 border-bottom p-2">
+    <span class="text-uppercase">Painting</span>
+  </div>
+  <div class="col col-md-4 border-bottom p-2">
+    <span class="text-uppercase">Options</span>
+  </div>
+</div>
 
-  <% @category.paintings.each do |painting| %>
-    <tr>
-      <td><%= painting.title %></td>
-      <td><%= link_to 'Edit', edit_admin_category_painting_path(@category, painting) %></td>
-      <td><%= link_to 'Delete', admin_category_painting_path(@category, painting), method: 'delete' %></td>
-    </tr>
-  <% end %>
-</table>
+<% @category.paintings.each do |painting| %>
+  <div class="row justify-content-md-center m-2">
+    <div class="col col-lg-2">
+      <div class="media">
+        <%= image_tag painting.image, class: "mr-3 img-thumbnail" if painting.image.attached? %>
+      </div>
+    </div>
+
+    <div class="col col-lg-2">
+      <%= link_to 'Edit Painting', edit_admin_category_painting_path(@category, painting), class: "btn btn-warning" %>
+    </div>
+    <div class="col col-lg-2">
+      <%= link_to 'Delete Painting', admin_category_painting_path(@category, painting),
+        class: "btn btn-danger",
+        method: 'delete',
+        data: { confirm: 'Are you sure?' } %>
+    </div>
+  </div>
+<% end %>
