--- a/app/views/admin/paintings/_form.html.erb
+++ b/app/views/admin/paintings/_form.html.erb
@@ -1,20 +1,4 @@
-<%= form_with model: [:category, @painting], url: admin_category_paintings_path, local: true, class: "col-md-5" do |form| %>
-
-  <% if @painting.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@painting.errors.count, "error") %>
-  prohibited
-        this painting from being saved:
-      </h2>
-      <ul>
-        <% @painting.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+<%= form_with model: [:category, @painting], url: url, local: true, class: "col-md-5" do |form| %>
     <h3>
       <span class="p-2 badge badge-secondary badge-light">
         <%= action %> Painting in <span class="badge-warning"><%= @category.name %>
