--- a/app/views/admin/paintings/new.html.erb
+++ b/app/views/admin/paintings/new.html.erb
@@ -1,3 +1,7 @@
 <div class="row justify-content-md-center">
-  <%= render 'form', action: "New" %>
+  <%= render 'alerts' %>
+</div>
+
+<div class="row justify-content-md-center">
+  <%= render 'form', action: "New", url: admin_category_paintings_path %>
 </div>
