nit: only show categories that aren't empty

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -20,7 +20,9 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <% @nav_categories.each do |cat| %>
-            <%= link_to cat.name, category_path(cat), class: "dropdown-item" %>
+            <% if cat.paintings.count > 0 %>
+              <%= link_to cat.name, category_path(cat), class: "dropdown-item" %>
+            <% end %>
           <% end %>
         </div>
       </li>
