--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,9 +1,9 @@
 <div class="p-3"></div>
 <div class="row justify-content-md-center m-4">
-  <div class="col col-md-2 border-bottom p-2">
+  <div class="col col-lg-2 col-md-4 border-bottom p-2">
     <span class="text-uppercase">Category</span>
   </div>
-  <div class="col col-md-4 border-bottom p-2">
+  <div class="col col-lg-4 col-md-8 border-bottom p-2">
     <span class="text-uppercase">Options</span>
   </div>
 </div>
