use check boxes for labels

--- a/app/views/admin/paintings/_form.html.erb
+++ b/app/views/admin/paintings/_form.html.erb
@@ -27,13 +27,13 @@
 
     <div class="form-group p-2">
       <div class="form-check">
-        <%= form.radio_button :new, value: "true", id: "new", class: "form-check-input", name: "labels" %>
-        <%= form.label :new, class: "form-check-label" %>
+        <%= form.check_box :new , id: "new", class: "form-check-input" %>
+        <%= form.label "New", class: "form-check-label" %>
       </div>
 
       <div class="form-check">
-        <%= form.radio_button :sold, value: "true", id: "sold", class: "form-check-input", name: "labels" %>
-        <%= form.label :sold, class: "form-check-label" %>
+        <%= form.check_box :sold, id: "sold", class: "form-check-input" %>
+        <%= form.label "Sold", class: "form-check-label" %>
       </div>
     </div>
 
