bad reverse logic

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <div class="media portfolio d-flex flex-column justify-content-start">
-  <% @paintings.each do |painting| %>
+  <% @paintings.reverse.each do |painting| %>
 
     <div class="d-flex flex-row mb-auto p-4">
 
