update size column to width/height columns

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -40,7 +40,7 @@
         <h4 class="media-heading">
           <%= painting.title %>
         </h4>
-        <%= painting.size %><br>
+        <%= painting.width %> x <%= painting.height %><br>
         <%= painting.medium %><br>
         $<%= painting.price.tr('$', '') %>
       </div>
