--- a/app/views/admin/paintings/_form.html.erb
+++ b/app/views/admin/paintings/_form.html.erb
@@ -11,8 +11,13 @@
     </div>
 
     <div class="form-group p-2">
-      <%= form.label :size %>
-      <%= form.text_field :size, class: "form-control" %>
+      <%= form.label :width%>
+      <%= form.text_field :width, class: "form-control" %>
+    </div>
+
+    <div class="form-group p-2">
+      <%= form.label :height %>
+      <%= form.text_field :height, class: "form-control" %>
     </div>
 
     <div class="form-group p-2">
