--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -11,7 +11,7 @@
 <% @categories.each do |category| %>
   <div class="row justify-content-md-center m-2">
     <div class="col col-lg-2">
-      <span class="btn btn-light"><%= category.name %></span>
+      <span class="btn btn-light"><%= category.name.capitalize %></span>
     </div>
     <div class="col col-lg-2">
       <%= link_to 'New Painting', new_admin_category_painting_path(category), class: "btn btn-primary" %>
