--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -1,6 +1,6 @@
 <h3 class="text-center">
   <span class="p-2 badge badge-secondary badge-light">
-    Category <span class="badge-warning"><%= @category.name %>
+    Category <span class="badge-warning"><%= @category.name.capitalize %>
   </span>
 </h3>
 
