--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,7 +8,7 @@
 
   <% @categories.each do |category| %>
     <tr>
-      <td><%= category.name %></td>
+      <td><%= category.name.capitalize %></td>
       <td><%= link_to 'Show', category_path(category) %></td>
     </tr>
   <% end %>
