--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -35,6 +35,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <%= link_to "update paintings", admin_categories_path, class: "dropdown-item" %>
             <%= link_to "new category", new_admin_category_path, class: "dropdown-item" %>
+            <%= link_to "exhibitions", admin_exhibitions_path, class: "dropdown-item" %>
             <%= link_to "leave admin", admin_logout_path, class: "dropdown-item" %>
           </div>
         </li>
