--- a/app/views/admin/exhibitions/new.html.erb
+++ b/app/views/admin/exhibitions/new.html.erb
@@ -3,7 +3,7 @@
     <div class="alert alert-light col-md-6" role="alert" id="error_explanation">
       <h6>
         <%= pluralize(@exhibition.errors.count, "error") %>
-        prohibited this category from being saved:
+        prohibited this exhibition from being saved:
       </h6>
       <ul class="list-group">
         <% @exhibition.errors.full_messages.each do |msg| %>
@@ -37,11 +37,6 @@
     <div class="form-group">
       <%= form.label :start %>
       <%= form.date_select(:start, start_year: 2000, discard_day: true) %>
-    </div>
-
-    <div class="form-group">
-      <%= form.label :end %>
-      <%= form.date_select(:end, start_year: 2000, discard_day: true, include_blank: true) %>
     </div>
 
     <div class="form-group">
