implement exhibitions carousel

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -36,6 +36,7 @@
             <%= link_to "update paintings", admin_categories_path, class: "dropdown-item" %>
             <%= link_to "new category", new_admin_category_path, class: "dropdown-item" %>
             <%= link_to "new exhibition", new_admin_exhibition_path, class: "dropdown-item" %>
+            <%= link_to "new exhibition image", new_admin_exhibition_image_path, class: "dropdown-item" %>
             <%= link_to "leave admin", admin_logout_path, class: "dropdown-item" %>
           </div>
         </li>
