--- a/app/views/exhibitions/index.html.erb
+++ b/app/views/exhibitions/index.html.erb
@@ -2,10 +2,12 @@
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="..." alt="First slide">
-      </div>
-   </div>
+      <% @images.each_with_index do |img, i| %>
+        <div class="carousel-item <%= 'active' if i == 0 %>">
+          <%= image_tag img.image, class: "d-block w-100", alt: img.caption %>
+        </div>
+      <% end %>
+    </div>
 
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
