--- a/app/views/admin/exhibition_images/new.html.erb
+++ b/app/views/admin/exhibition_images/new.html.erb
@@ -1,11 +1,24 @@
-<%= form_with model: [:admin, @exhibition_image], local: true, class: "col-md-5" do |form| %>
- <div class="custom-file p-2">
-    <%= form.file_field :image, class: "custom-file-input" %>
-    <%= form.label :image, class: "custom-file-label" %>
-  </div>
+<div class="row justify-content-md-center">
+  <%= form_with model: [:admin, @exhibition_image], local: true, class: "col-md-5" do |form| %>
+    <h3>
+      <span class="p-2 badge badge-secondary badge-light">
+        New Exhibition Image
+      </span>
+    </h3>
 
-  <div class="form-group py-4">
-    <%= form.submit "Submit", class: "btn btn-primary" %>
-  </div>
+    <div class="custom-file p-2">
+      <%= form.file_field :image, class: "custom-file-input" %>
+      <%= form.label :image, class: "custom-file-label" %>
+    </div>
 
-<% end %>
+    <div class="form group p-2">
+      <%= form.label :caption %>
+      <%= form.text_field :caption, class: "form-control" %>
+    </div>
+
+    <div class="form-group py-4">
+      <%= form.submit "Submit", class: "btn btn-primary" %>
+    </div>
+
+  <% end %>
+</div>
