--- a/app/views/admin/exhibition_images/new.html.erb
+++ b/app/views/admin/exhibition_images/new.html.erb
@@ -1,7 +1,7 @@
-<div class="row justify-content-md-center">
-  <%= form_with model: [:admin, @exhibition_image], local: true, class: "col-md-5" do |form| %>
+<div class="row justify-content-md-center py-4">
+  <%= form_with model: [:admin, @exhibition_image], local: true, class: "form" do |form| %>
     <h3>
-      <span class="p-2 badge badge-secondary badge-light">
+      <span class="py-2 badge badge-secondary badge-light">
         New Exhibition Image
       </span>
     </h3>
@@ -11,7 +11,7 @@
       <%= form.label :image, class: "custom-file-label" %>
     </div>
 
-    <div class="form group p-2">
+    <div class="form-group p-2">
       <%= form.label :caption %>
       <%= form.text_field :caption, class: "form-control" %>
     </div>
@@ -19,6 +19,5 @@
     <div class="form-group py-4">
       <%= form.submit "Submit", class: "btn btn-primary" %>
     </div>
-
   <% end %>
 </div>
