add exhibition edit and destroy routes

--- a/app/views/admin/exhibitions/edit.html.erb
+++ b/app/views/admin/exhibitions/edit.html.erb
@@ -17,5 +17,5 @@
 </div>
 
 <div class="row justify-content-md-center">
-  <%= render 'form', action: "New", url: admin_exhibitions_path %>
+  <%= render 'form', action: "Edit", url: admin_exhibition_path(@exhibition) %>
 </div>
