add nav to update exhibitions

--- a/app/views/admin/exhibitions/index.html.erb
+++ b/app/views/admin/exhibitions/index.html.erb
@@ -1,5 +1,12 @@
 <div class="p-3"></div>
 
+
+<div class="row justify-content-md-center m-4">
+  <div class="col col-lg-2">
+    <%= link_to 'New Exhibition', new_admin_exhibition_path, class: "btn btn-primary" %>
+  </div>
+</div>
+
 <div class="row justify-content-md-center m-4">
   <div class="col col-md-2 border-bottom p-2">
     <span class="text-uppercase">Exhibition</span>
