remove double reverse

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <div class="media portfolio justify-content-start d-flex flex-column">
-  <% @paintings.reverse.each do |painting| %>
+  <% @paintings.each do |painting| %>
 
     <div class="d-flex flex-sm-row flex-column p-4">
 
@@ -50,6 +50,5 @@
       </div>
 
     </div>
-
   <% end %>
 </div>
