--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -14,7 +14,7 @@
   </div>
 </div>
 
-<% @category.paintings.each do |painting| %>
+<% @category.paintings.reverse.each do |painting| %>
   <div class="row justify-content-md-center m-2">
     <div class="col col-lg-2">
       <div class="media">
