--- a/app/javascript/stylesheets/_custom.scss
+++ b/app/javascript/stylesheets/_custom.scss
@@ -35,15 +35,10 @@ body {
 	margin: 0;
 	background-color: $bgr-color;
 	padding-bottom: 40px;
-
-	.navbar-light .navbar-nav .nav-link.active {
-    color: $light-gray;
-	}
 }
 
-.navbar .navbar-brand {
+.navbar-light .navbar-brand {
 	color: $light-gray;
-
 
 	&:hover{
 		color: $super-light-gray;
@@ -56,8 +51,6 @@ body {
 }
 
 .navbar {
-	background-color: transparent;
-	border: none;
 	width: 80%;
 	margin: 10px auto;
 
@@ -79,6 +72,11 @@ body {
 			padding-bottom: 5px;
 			padding-left: 10px;
 			padding-right: 10px;
+
+      @media screen and (max-width: 520px) {
+        font-size: 16px;
+      }
+
 		}
 	}
 }
@@ -89,26 +87,6 @@ body {
 	margin: 0 auto;
 	padding: 0;
 }
-
-.back-to-top {
-	background: none;
-	margin: 0;
-	padding: 0;
-	float: right;
-	width: 70px;
-	height: 70px;
-	z-index: 100;
-	display: none;
-	color: black;
-	font-size: 30px;
-
-	@media screen and (max-width: 520px) {
-		text-align: right;
-		padding-right: 15px;
-	}
-
-}
-
 
 .cover-photo {
 	width: 90%;
@@ -205,20 +183,19 @@ body {
 
 .carousel {
 	border: 10px solid white;
-	width: 75%;
 	margin: 0 auto;
 
 	.carousel-inner {
-		.item {
-				max-height: 600px;
+		.carousel-item {
+      max-height: 400px;
+
 		}
 	}
 
 	@media screen and (max-width: 520px) {
-		width: 100%;
 		.carousel-inner {
-			.item {
-					max-height: 340px;
+			.carousel-item {
+        max-height: 200px;
 			}
 		}
 	}
@@ -277,9 +254,12 @@ body {
 .portfolio {
 	padding-top: 50px;
 
+	@media screen and (max-width: 520px) {
+    padding-top: 0px;
+  }
 	@media screen and (max-width: 720px) {
 					padding-left: 0px;
-				}
+  }
 }
 
 .media-left {
