fix painting title capitalization

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -38,7 +38,7 @@
 
       <div class="media-body">
         <h4 class="media-heading">
-          <%= painting.title.capitalize %>
+          <%= painting.title.titleize %>
         </h4>
 
         <% if painting.width? && painting.height? %>
