Add some meta tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JurgitaArt</title>
+    <title>Jurgita Dishman | Contemporary Painter | Lithuanian Artist</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Artist Jurgita Dishman is an exibiting contemporary painter specializing acrylics. She has work in Kaunas, Berlin, Dubai and Winter Park.">
+    <meta name=”robots” content=”index, follow”>
+    <meta name="og:title" content="Jurgita Dishman | Contemporary Painter">
+    <meta name="og:description" content="Artist Jurgita Dishman is an exibiting contemporary painter specializing acrylics. She has work in Kaunas, Berlin, Dubai and Winter Park.">
+    <meta property="og:type" content="website" />
+    <meta name="og:url" content="https://www.jurgitadishman.com/">
+    <meta name="og:site_name" content="Artist Jurgita Dishman">
 
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
