do not show price if sold

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -46,7 +46,10 @@
         <% end %>
 
         <%= painting.medium.capitalize %><br>
-        $<%= painting.price.tr('$', '') %>
+
+        <% unless painting.sold? %>
+          $<%= painting.price.tr('$', '') %>
+        <% end %>
       </div>
 
     </div>
